--- a/Controls/Input/PasswordEntryControl.xaml
+++ b/Controls/Input/PasswordEntryControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="wpf_advance.TextEntryControl"
+﻿<UserControl x:Class="wpf_advance.PasswordEntryControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:wpf_advance"
              xmlns:core="clr-namespace:wpf_advance.Core;assembly=Core"
              mc:Ignorable="d"
-             d:DataContext="{x:Static core:TextEntryDisignModel.Instance}">
+             d:DataContext="{x:Static core:PasswordEntryDisignModel.Instance}">
     <Border BorderBrush="{StaticResource ForegroundDarkBrush}"
             BorderThickness="0 0 0 0.4">
         <Grid Background="{StaticResource ForegroundLightBrush}">
@@ -37,29 +37,59 @@
                 </EventTrigger>
             </Grid.Triggers>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition x:Name="LabelColumnDefinition" Width="Auto" />
+                <ColumnDefinition x:Name="LabelColumnDefinition"
+                                  Width="Auto" />
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
             <TextBlock Text="{Binding Label}"
                        x:Name="Label"
                        Margin="15 12"
                        VerticalAlignment="Center"
                        FontFamily="{StaticResource LatoRegular}" />
-            <TextBox Grid.Column="1"
-                     Text="{Binding EditedText, UpdateSourceTrigger=PropertyChanged}"
-                     FontSize="{StaticResource FontSizeRegular}"
-                     Opacity="0"
-                     Padding="2"
-                     Margin="10 10 15 8"
-                     HorizontalAlignment="Left"
-                     local:FocuseAndSelectProperty.Value="{Binding Editing}"
-                     local:AnimateFadeInProperty.Value="{Binding Editing}" />
+            <PasswordBox Grid.Column="1"
+                         Grid.Row="0"
+                         Tag="{Binding CurrentPasswordHintText}"
+                         x:Name="CurrentPassword"
+                         PasswordChanged="CurrentPassword_PasswordChanged"
+                         FontSize="{StaticResource FontSizeRegular}"
+                         Opacity="0"
+                         Padding="2"
+                         Margin="10 10 15 8"
+                         HorizontalAlignment="Left"
+                         local:AnimateFadeInProperty.Value="{Binding Editing}" />
+            <PasswordBox Grid.Column="1"
+                         Grid.Row="1"
+                         Tag="{Binding NewPasswordHintText}"
+                         x:Name="NewPassword"
+                         PasswordChanged="NewPassword_PasswordChanged"
+                         
+                         FontSize="{StaticResource FontSizeRegular}"
+                         Opacity="0"
+                         Padding="2"
+                         Margin="10 10 15 8"
+                         HorizontalAlignment="Left"
+                         local:AnimateFadeInProperty.Value="{Binding Editing}" />
+            <PasswordBox Grid.Column="1"
+                         Grid.Row="2"
+                         Tag="{Binding ConfirmPasswordHintText}"
+                         x:Name="ConfirmPassword"
+                         PasswordChanged="ConfirmPassword_PasswordChanged"
+                         FontSize="{StaticResource FontSizeRegular}"
+                         Opacity="0"
+                         Padding="2"
+                         Margin="10 10 15 8"
+                         HorizontalAlignment="Left"
+                         local:AnimateFadeInProperty.Value="{Binding Editing}" />
             <TextBlock Grid.Column="1"
-                       Text="{Binding OriginalText}"
+                       Text="{Binding FakePassword}"
                        Margin="15 8"
                        VerticalAlignment="Center"
-                       ToolTip="{Binding OriginalText}"
                        local:AnimateFadeInProperty.Value="{Binding Editing, Converter={local:BooleanInvertConverter}}"
                        local:FocuseAndSelectProperty.Value="{Binding Editing}" />
             <Grid Grid.Column="2"
