--- a/Controls/Chat/ChatListItemControl.xaml
+++ b/Controls/Chat/ChatListItemControl.xaml
@@ -15,6 +15,10 @@
                     <ControlTemplate TargetType="{x:Type ContentControl}">
                         <Border x:Name="Background"
                                 Background="{StaticResource ForegroundLightBrush}">
+                            <Border.InputBindings>
+                                <MouseBinding MouseAction="LeftClick"
+                                              Command="{Binding OpenMessage}" />
+                            </Border.InputBindings>
                             <Grid x:Name="Container"
                                   Background="Transparent">
                             <Grid.ColumnDefinitions>
