--- a/Controls/Chat/ChatMessage/ChatMessageListControl.xaml
+++ b/Controls/Chat/ChatMessage/ChatMessageListControl.xaml
@@ -10,7 +10,8 @@
              d:DesignWidth="800">
     <Grid d:DataContext="{x:Static core:ChatMessageListDisignModel.Instance}"
           VerticalAlignment="Bottom">
-        <ScrollViewer VerticalScrollBarVisibility="Auto">
+        <ScrollViewer VerticalScrollBarVisibility="Auto"
+                      local:ScrollToBottomOnLoadProperty.Value="True">
             <ItemsControl ItemsSource="{Binding Items}">
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
