--- a/Pages/ChatPage.xaml
+++ b/Pages/ChatPage.xaml
@@ -31,7 +31,7 @@
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
-            <TextBlock Grid.Column="0" 
+            <TextBlock Grid.Column="0"
                        Grid.ColumnSpan="2"
                        Text="Parnell"
                        Foreground="{StaticResource ForegroundLightBrush}"
@@ -42,18 +42,21 @@
             <StackPanel Grid.Column="1"
                         Orientation="Horizontal">
                 <Button Content="{StaticResource FontAwesomeSearchIcon}"
-                        Style="{StaticResource IconGrowButton}"/>
+                        Style="{StaticResource IconGrowButton}" />
                 <Button Content="{StaticResource FontAwesomeEllipsisVerticalIcon}"
                         Style="{StaticResource IconGrowButton}" />
             </StackPanel>
         </Grid>
-        <local:ChatMessageListControl Grid.Row="1"/>
-        <local:BubbleControl Grid.Row="1"
-                             Panel.ZIndex="2"
-                             DataContext="{Binding AttachmentMenu}"
-                             VerticalAlignment="Bottom"
-                             HorizontalAlignment="Left"
-                             local:AnimateSlideInFromBottomProperty.Value="{Binding ViewModel.AttachmentMenuVisible, RelativeSource={RelativeSource AncestorType={x:Type local:ChatPage}}}"/>
+        <local:ChatMessageListControl Grid.Row="1"
+                                      x:Name="ChatMessageList"
+                                      DataContext="{Binding}" />
+        <Border Grid.Row="1"
+                Panel.ZIndex="2"
+                VerticalAlignment="Bottom"
+                HorizontalAlignment="Left"
+                local:AnimateSlideInFromBottomProperty.Value="{Binding AttachmentMenuVisible}">
+            <local:BubbleControl DataContext="{Binding AttachmentMenu}" />
+        </Border>
         <Grid Grid.Row="2"
               Panel.ZIndex="3"
               MinHeight="50"
@@ -79,7 +82,7 @@
                      BorderThickness="0"
                      AcceptsReturn="True"
                      AcceptsTab="True"
-                     VerticalScrollBarVisibility="Auto"/>
+                     VerticalScrollBarVisibility="Auto" />
             <StackPanel Grid.Column="2"
                         Orientation="Horizontal"
                         Margin="0 0 8 0"
@@ -92,7 +95,7 @@
                         Padding="8"
                         Command="{Binding SendCommand}"
                         Background="{StaticResource WordGreenBrush}"
-                        FontSize="{StaticResource FontSizeRegular}"/>
+                        FontSize="{StaticResource FontSizeRegular}" />
             </StackPanel>
         </Grid>
     </Grid>
