--- a/Controls/Chat/ChatMessage/ChatMessageListControl.xaml
+++ b/Controls/Chat/ChatMessage/ChatMessageListControl.xaml
@@ -11,11 +11,12 @@
     <Grid d:DataContext="{x:Static core:ChatMessageListDisignModel.Instance}"
           VerticalAlignment="Bottom">
         <ScrollViewer VerticalScrollBarVisibility="Auto"
-                      local:ScrollToBottomOnLoadProperty.Value="True">
+                      local:ScrollToBottomOnLoadProperty.Value="True"
+                      local:AutoScrollToBottomOnLoadProperty.Value="True">
             <ItemsControl ItemsSource="{Binding Items}">
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
-                        <local:ChatMessageListItemControl />
+                        <local:ChatMessageListItemControl local:AnimateSlideInFromBottomOnLoadProperty.Value="{Binding NewItem}" />
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
             </ItemsControl>
