--- a/Controls/Chat/ChatMessage/ChatMessageListItemControl.xaml
+++ b/Controls/Chat/ChatMessage/ChatMessageListItemControl.xaml
@@ -49,28 +49,47 @@
                     </EventTrigger>
                 </Grid.Triggers>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="*" />
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
-                <Border Grid.Row="0"
-                        CornerRadius="10"
-                        Padding="15"
-                        Background="{Binding SentByMe, Converter={local:SendByMeToBackgroundConverter}}">
-                    <TextBlock VerticalAlignment="Center"
-                               Text="{Binding Message}"
-                               TextWrapping="Wrap"
-                               Foreground="{StaticResource WordDarkBlueBrush}"
-                               FontFamily="{StaticResource LatoRegular}" />
-                </Border>
-                <Path Grid.Row="1"
-                      Panel.ZIndex="1"
-                      Margin="15 -1 15 0"
-                      StrokeThickness="0"
-                      Fill="{Binding SentByMe, Converter={local:SendByMeToBackgroundConverter}}"
-                      HorizontalAlignment="{Binding SentByMe, Converter={local:SendByMeToAligmentConverter}}"
-                      Data="M 0,0 L 10,10 L 20,0 L 0,0" />
-                <StackPanel Grid.Row="2"
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                    <Border CornerRadius="10"
+                            Margin="0 0 0 15">
+                        <Image DataContext="{Binding ImageAttachment}"
+                               Source="{Binding LocalFilePath}"
+                               MaxWidth="300"
+                               local:ClipFromBorderProperty.Value="True"/>
+                    </Border>
+                    <Grid Grid.Row="1"
+                          Visibility="{Binding HasMessage, Converter={local:BooleanToVisibilityGoneConverter}}">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
+                        <Border Grid.Row="0"
+                                CornerRadius="10"
+                                Padding="15"
+                                Background="{Binding SentByMe, Converter={local:SendByMeToBackgroundConverter}}">
+                            <TextBlock VerticalAlignment="Center"
+                                       Text="{Binding Message}"
+                                       TextWrapping="Wrap"
+                                       Foreground="{StaticResource WordDarkBlueBrush}"
+                                       FontFamily="{StaticResource LatoRegular}" />
+                        </Border>
+                        <Path Grid.Row="1"
+                              Panel.ZIndex="1"
+                              Margin="15 -1 15 0"
+                              StrokeThickness="0"
+                              Fill="{Binding SentByMe, Converter={local:SendByMeToBackgroundConverter}}"
+                              HorizontalAlignment="{Binding SentByMe, Converter={local:SendByMeToAligmentConverter}}"
+                              Data="M 0,0 L 10,10 L 20,0 L 0,0" />
+                    </Grid>
+                </Grid>
+                <StackPanel Grid.Row="1"
                             x:Name="ExtraDetails"
                             Orientation="Horizontal"
                             Opacity="0"
