--- a/Controls/Chat/ChatMessage/ChatMessageListItemControl.xaml
+++ b/Controls/Chat/ChatMessage/ChatMessageListItemControl.xaml
@@ -57,14 +57,24 @@
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
+                    <Border HorizontalAlignment="{Binding SentByMe, Converter={local:SendByMeToAligmentConverter}}"
+                            VerticalAlignment="Top">
+                        <TextBlock Style="{StaticResource SpinningText}"
+                                   Foreground="{StaticResource ForegroundLightBrush}"
+                                   Padding="20"
+                                   DataContext="{Binding ImageAttachment}"
+                                   Visibility="{Binding ImageLoaded, Converter={local:BooleanToVisibilityGoneConverter}, ConverterParameter=True, FallbackValue=Collapsed}" />
+                    </Border>
                     <Border CornerRadius="10"
                             Margin="0 0 0 15">
                         <Image DataContext="{Binding ImageAttachment}"
-                               Source="{Binding LocalFilePath}"
+                               Source="{Binding LocalFilePath, NotifyOnTargetUpdated=True}"
                                MaxWidth="300"
-                               local:ClipFromBorderProperty.Value="True"/>
+                               local:ClipFromBorderProperty.Value="True"
+                               local:FadeImageOnLoadProperty.Value="True" />
                     </Border>
                     <Grid Grid.Row="1"
+                          HorizontalAlignment="{Binding SentByMe, Converter={local:SendByMeToAligmentConverter}}"
                           Visibility="{Binding HasMessage, Converter={local:BooleanToVisibilityGoneConverter}}">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto" />
@@ -98,7 +108,7 @@
                                Foreground="{StaticResource ForegroundLightBrush}"
                                FontSize="{StaticResource FontSizeSmall}"
                                FontFamily="{StaticResource LatoRegular}"
-                               Margin="0 0 15 0"/>
+                               Margin="0 0 15 0" />
                     <TextBlock Text="{Binding MessageReadTime, Converter={local:TimeToReadTimeConverter}}"
                                Foreground="{StaticResource WordDarkBlueBrush}"
                                FontSize="{StaticResource FontSizeSmall}"
